# AoC-2021-c-

./: CMakeLists.txt  README.md
day1/: day1.cpp  problem.txt
day10/: day10.cpp
day11/: day11.cpp
day12/: day12.cpp  day12_fast.cpp  problem.txt
day13/: day13.cpp  problem.txt
day2/: day2.cpp  problem.txt
day3/: day3.cpp  problem.txt
day4/: day4.cpp  problem.txt
day5/: day5.cpp  problem.txt
day6/: day6.cpp  problem.txt
day7/: day7.cpp  problem.txt
day8/: day8.cpp  problem.txt
day9/: day9.cpp  problem.txt
days/day1/: day1.cpp  day1.txt
days/day10/: day10.cpp  day10.txt  problem.txt
days/day11/: day11.cpp  day11.txt  problem.txt
days/day12/: day12.cpp  day12.txt
days/day13/: day13.cpp  day13.txt
days/day14/: day14.cpp  day14.txt  problem.txt
days/day15/: day15.cpp  day15.txt  problem.txt
days/day16/: day16.cpp  day16.txt  problem.txt
days/day17/: day17.cpp  day17.txt  problem.txt
days/day18/: day18.cpp  day18.txt  problem.txt
days/day19/: day19.cpp  day19.txt  problem.txt
days/day2/: day2.cpp  day2.txt
days/day20/: day20.cpp  day20.txt  problem.txt
days/day21/: day21.cpp  day21.txt  problem.txt
days/day22/: day22.cpp  day22.txt  problem.txt
days/day23/: day23.cpp  day23.txt  problem.txt
days/day24/: day24.cpp  day24.txt  problem.txt
days/day25/: day25.cpp  day25.txt  problem.txt
days/day3/: day3.cpp  day3.txt
days/day4/: day4.cpp  day4.txt  problem.txt
days/day5/: day5.cpp  day5.txt
days/day6/: day6.cpp  day6.txt  problem.txt
days/day7/: day7.cpp  day7.txt  problem.txt
util/: runall.cpp
(+5 files in other folders)
