cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)

project(Aoc CXX)

add_link_options(-lpthread)

add_executable(day1 days/day1/day1.cpp)
add_executable(day2 days/day2/day2.cpp)
add_executable(day3 days/day3/day3.cpp)
add_executable(day4 days/day4/day4.cpp)
add_executable(day5 days/day5/day5.cpp)
add_executable(day6 days/day6/day6.cpp)
add_executable(day7 days/day7/day7.cpp)
add_executable(day8 days/day8/day8.cpp)
add_executable(day9 days/day9/day9.cpp)
add_executable(day10 days/day10/day10.cpp)
add_executable(day11 days/day11/day11.cpp)
add_executable(day12 days/day12/day12.cpp)
add_executable(day13 days/day13/day13.cpp)
add_executable(day14 days/day14/day14.cpp)
add_executable(day15 days/day15/day15.cpp)
add_executable(day16 days/day16/day16.cpp)
add_executable(day17 days/day17/day17.cpp)
add_executable(day18 days/day18/day18.cpp)
add_executable(day19 days/day19/day19.cpp)
add_executable(day20 days/day20/day20.cpp)
add_executable(day21 days/day21/day21.cpp)
add_executable(day22 days/day22/day22.cpp)
add_executable(day23 days/day23/day23.cpp)
add_executable(day24 days/day24/day24.cpp)
add_executable(day25 days/day25/day25.cpp)
